--- a/distFS/pom.xml
+++ b/distFS/pom.xml
@@ -92,31 +92,51 @@
         </execution>
     </executions>
  </plugin>
-<plugin>
-  <artifactId>maven-assembly-plugin</artifactId>
-  <configuration>
-    <finalName>distFSFinal</finalName>
-    <archive>
-      <manifest>
-        <mainClass>edu.uiuc.cs425.App</mainClass>
-      </manifest>
-    </archive>
-    <descriptorRefs>
-      <descriptorRef>jar-with-dependencies</descriptorRef>
-    </descriptorRefs>
-    <appendAssemblyId>false</appendAssemblyId>  
-</configuration>
-  <executions>
-    <execution>
-      <id>make-assembly</id> <!-- this is used for inheritance merges -->
-      <phase>package</phase> <!-- bind to the packaging phase -->
-      <goals>
-        <goal>single</goal>
-      </goals>
-    </execution>
-  </executions>
-</plugin>
- 	
+ 
+ 
+ <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <executions>
+        <execution>
+            <id>SDFS</id>
+            <configuration>
+                <appendAssemblyId>false</appendAssemblyId>
+                <archive>
+                    <manifest>
+                        <mainClass>edu.uiuc.cs425.App</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <finalName>distFSFinal</finalName>
+            </configuration>
+            <phase>package</phase>
+            <goals>
+                <goal>single</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>SDFSClient</id>
+            <configuration>
+                <appendAssemblyId>false</appendAssemblyId>
+                <archive>
+                    <manifest>
+                        <mainClass>edu.uiuc.cs425.SDFSClientMain</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <finalName>distFSClientFinal</finalName>
+            </configuration>
+            <phase>package</phase>
+            <goals>
+                <goal>single</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin> 	
   	</plugins>
   </build>
   <dependencies>
