--- a/distFS/pom.xml
+++ b/distFS/pom.xml
@@ -156,6 +156,11 @@
       <artifactId>protobuf-java</artifactId>
       <version>2.4.1</version>
     </dependency>
+    <dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
 <!-- 
     <dependency>
       <groupId>org.slf4j</groupId>
